[package]
name = "bpf-agent-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/liyan-ah/aya", rev = "2bec904a3c2239cb8de1bc33a590a50f1a664f58" }
aya-log-ebpf = { git = "https://github.com/liyan-ah/aya", rev = "2bec904a3c2239cb8de1bc33a590a50f1a664f58" }
bpf-agent-common = { path = "../bpf-agent-common" }

[[bin]]
name = "bpf-agent"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
